# bus2platform

./: AUTHORS  Makefile.am  Makefile.in  Mathematical_models_of_Gate_Assignment.md  ProjectHome.md  TODO.md  configure  configure.ac
doc/presentations/: Presentazione_20120228.lyx  airo_2011.lyx
doc/report/: Abstract_en.docx  Abstract_it.docx  Tesi.lyx  rendiconto.lyx  univpmphdthesis.layout
instances/: Tipo_Giorno_Corse.csv  a_500_20_300_960_25_3.txt  a_500_20_300_960_25_5.txt  generator.cpp  istanza_es2_tesi.txt  istanza_reale.txt  istanza_reale_feasible.txt  istanza_reale_feasible_no10_15.txt  istanza_reale_feasible_no10_16.txt  istanza_reale_feasible_no10_17.txt  istanza_reale_feasible_no10_18.txt  istanza_reale_gateplanner.xls  p010.txt  p020.txt  p025.txt
src/: Bus.cpp  Bus.h  BusTime.h  Calendar.cpp  CalendarDate.cpp  ConstraintProgrammingListGraphColoring.h  GanttDiagram.cpp  GanttDiagram.h  Gate.h  GraphModel.cpp  GraphModel.h  Interval.h  IntervalEndpoint.h  IntervalPackingFinishFirst.h  IntervalPackingFirstFit.cpp  IntervalPackingFirstFit.h  IterativeTimeHorizonMath.cpp  IterativeTimeHorizonMathMD.cpp  IterativeTimeHorizonMathMD.h  ListColoringTreeSearch.cpp  Makefile.am  Makefile.in  MathModel.h  MathModelBP.cpp  MathModelBP.h  MathModelBPsingle.cpp  MathModelBPsingle.h  MathModelColoring.cpp  MathModelColoring.h  MathModelMaxMinDistance.cpp  MathModelMaxMinDistance.h  MathModelMaxTotalDistance.cpp  MathModelMaxTotalDistance.h  MathModelMinPConflict.cpp  MathModelMinPConflict.h  SetModel.cpp  SetModel.h  SolutionAlgorithm.h  SolutionReport.cpp  SolutionReport.h  (+7 more)
test/: run_tests.sh
test/a_100_10_300_960_5_1/: modelBP.lp  modelIterativeMMD_000.lp  modelIterativeMMD_001.lp  modelIterativeMMD_002.lp  modelIterativeMMD_003.lp  modelIterativeMMD_004.lp  modelIterativeMMD_006.lp  modelIterativeMMD_007.lp  modelIterativeMMD_008.lp  modelIterativeMMD_009.lp  modelIterativeMMD_010.lp  modelIterativeMMD_012.lp  modelIterativeMMD_013.lp  modelIterativeMMD_014.lp  modelIterativeMPC_002.lp  modelIterativeMPC_004.lp  modelIterativeMPC_007.lp  modelIterativeMPC_010.lp  modelIterativeMPC_013.lp  modelIterativeMPC_014.lp  modelIterativeMPC_015.lp  solution_details
test/a_100_10_300_960_5_2/: modelIterativeMMD_006.lp  modelIterativeMMD_010.lp  modelIterativeMMD_013.lp  modelIterativeMPC_001.lp  modelIterativeMPC_011.lp
test/a_100_10_300_960_5_3/: modelBP.lp  modelIterativeMMD_002.lp  modelIterativeMPC_005.lp
test/a_100_10_300_960_5_4/: modelColoring.lp  modelIterativeMMD_008.lp  modelIterativeMMD_009.lp  modelIterativeMPC_003.lp  modelIterativeMPC_004.lp  modelIterativeMPC_012.lp  modelIterativeMPC_014.lp
test/a_100_10_300_960_5_5/: modelIterativeMMD_003.lp  modelIterativeMMD_004.lp  modelIterativeMMD_012.lp  (+3 more)
trunk/: Doxyfile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
trunk/src/: Bus.cpp  Bus.h  Calendar.h  CalendarDate.h  ConstraintProgrammingListGraphColoring.h  GanttDiagram.cpp  GanttDiagram.h  Gate.cpp  Gate.h  GraphModel.cpp  GraphModel.h  Interval.cpp  Interval.h  IntervalEndpoint.cpp  IntervalEndpoint.h  IntervalPackingFinishFirst.cpp  IntervalPackingFirstFit.cpp  IntervalPackingFirstFit.h  IterativeTimeHorizonMath.cpp  IterativeTimeHorizonMath.h  IterativeTimeHorizonMathMD.h  ListColoringTreeSearch.cpp  ListColoringTreeSearch.h  Makefile.am  Makefile.in  MathModel.cpp  MathModel.h  MathModelBP.cpp  MathModelBP.h  MathModelBPsingle.cpp  MathModelBPsingle.h  MathModelColoring.cpp  MathModelColoring.h  MathModelMaxMinDistance.cpp  MathModelMaxTotalDistance.cpp  MathModelMinPConflict.cpp  SetModel.cpp  SetModel.h  SolutionAlgorithm.h  SolutionReport.cpp  (+4 more)
wiki/: Mathematical_models_of_Gate_Assignment.wiki  TODO.wiki
(+517 files in other folders)
