bin_PROGRAMS = gap_graph
gap_graph_SOURCES = Bus.cpp Calendar.cpp CalendarDate.cpp GanttDiagram.cpp Gate.cpp GraphModel.cpp has_id.cpp Interval.cpp IntervalEndpoint.cpp IntervalPackingFinishFirst.cpp IntervalPackingFirstFit.cpp ListColoringTreeSearch.cpp main.cpp MathModelBP.cpp MathModelBPsingle.cpp MathModel.cpp MathModelMaxMinDistance.cpp MathModelMaxTotalDistance.cpp MathModelMinPConflict.cpp SetModel.cpp SolutionAlgorithm.cpp SolutionReport.cpp TimeAvailability.cpp TimeSlots.cpp           Bus.h BusTime.h CalendarDate.h Calendar.h GanttDiagram.h gap.h Gate.h GraphModel.h has_id.h IntervalEndpoint.h Interval.h IntervalPackingFinishFirst.h IntervalPackingFirstFit.h ListColoringTreeSearch.h MathModelBP.h MathModelBPsingle.h MathModel.h MathModelMaxMinDistance.h MathModelMaxTotalDistance.h MathModelMinPConflict.h SetModel.h SolutionAlgorithm.h SolutionReport.h TimeAvailability.h TimeSlots.h
gap_graph_LDFLAGS = 
gap_graph_LDADD = -lcairo -llpsolve55 

